fin des differentes classes du cv et debut du formulaires

--- a/Web/CreateCv.html
+++ b/Web/CreateCv.html
@@ -5,7 +5,8 @@
     <title>Créer un CV</title>
 </head>
 <body>
-<form action="/Classes/main.php" method="post">
+
+<form action="../Classes/main.php" method="post">
     <h1>Créer un CV</h1>
     <h3>cv</h3>
     <label for="titre">Titre</label>
