fin des differentes classes du cv et debut du formulaires

--- a/Web/CreateCv.html
+++ b/Web/CreateCv.html
@@ -16,11 +16,23 @@
     <label for="prenom">Prénom</label>
     <input type="text" name="prenom" placeholder="Prénom" id="prenom"><br>
     <label for="description">description</label>
-    <input  type="hidden" name="token" value="votre_jeton_CSRF">
     <input type="text" name="description" placeholder="Description" id="description"><br>
+    <h3>Contact</h3>
+    <label for="email">Email</label>
+    <input type="text" name="email" placeholder="Email" id="email"><br>
+    <label for="telephone">Téléphone</label>
+    <input type="text" name="telephone" placeholder="Téléphone" id="telephone"><br>
+    <label for="adresse">Adresse</label>
+    <input type="text" name="adresse" placeholder="Adresse" id="adresse"><br>
     <h3>Education</h3>
+    <label for="Nom de l'ecole">Nom de l'ecole</label>
+    <input type="text" name="school" placeholder="Nom de l'ecole" id="school"><br>
+    <label for="formation">formation</label>
+<input type="text" name="formation" placeholder="formation" id="formation"><br>
+    <label for="date">date</label>
+    <input type="text" name="date" placeholder="date" id="date"><br>
 
-
+    <input  type="hidden" name="token" value="votre_jeton_CSRF">
     <button type="submit">Créer</button>
 
 </form>
