ne fonctionne pas

--- a/Web/CreateCv.html
+++ b/Web/CreateCv.html
@@ -25,12 +25,28 @@
     <label for="adresse">Adresse</label>
     <input type="text" name="adresse" placeholder="Adresse" id="adresse"><br>
     <h3>Education</h3>
-    <label for="Nom de l'ecole">Nom de l'ecole</label>
+    <label for="school">Nom de l'ecole</label>
     <input type="text" name="school" placeholder="Nom de l'ecole" id="school"><br>
     <label for="formation">formation</label>
-<input type="text" name="formation" placeholder="formation" id="formation"><br>
-    <label for="date">date</label>
-    <input type="text" name="date" placeholder="date" id="date"><br>
+    <input type="text" name="formation" placeholder="formation" id="formation"><br>
+    <label for="dateEducation">date</label>
+    <input type="text" name="dateEducation" placeholder="date" id="dateEducation"><br>
+    <h3>Experience</h3>
+    <label for="Name_entreprise">Nom de l'entreprise</label>
+    <input type="text" name="name_entreprise" placeholder="Nom de l'entreprise" id="name_entreprise"><br>
+    <label for="dateExperience">date</label>
+    <input type="text" name="dateExperience" placeholder="dat" id="dateExperience"><br>
+    <label for="descriptionExperience">description</label>
+    <input type="text" name="descriptionExperience" placeholder="description" id="descriptionExperience"><br>
+    <h3>Interet</h3>
+    <label for="interest">interet</label>
+    <input type="text" name="interest" placeholder="interet" id="interest"><br>
+<!--    <h3>Competence</h3>-->
+<!--    <h3>hardskill</h3>-->
+<!--    <label for="Hardskill">hardskill</label>-->
+<!--    <input type="text" name="Hardskill" placeholder="hard-skill" id="Hardskill"><br>-->
+
+
 
     <input  type="hidden" name="token" value="votre_jeton_CSRF">
     <button type="submit">Créer</button>
