format pdf fonctionnel

--- a/Web/CreateCv.html
+++ b/Web/CreateCv.html
@@ -41,11 +41,13 @@
     <h3>Interet</h3>
     <label for="interest">interet</label>
     <input type="text" name="interest" placeholder="interet" id="interest"><br>
-<!--    <h3>Competence</h3>-->
-<!--    <h3>hardskill</h3>-->
-<!--    <label for="Hardskill">hardskill</label>-->
-<!--    <input type="text" name="Hardskill" placeholder="hard-skill" id="Hardskill"><br>-->
-
+    <h3>Competence</h3>
+    <h3>hardskill</h3>
+    <label for="Hardskill">hardskill</label>
+    <input type="text" name="hardskill" placeholder="hard-skill" id="hardskill"><br>
+    <h3>softskill</h3>
+    <label for="Softskill">softskill</label>
+    <input type="text" name="softskill" placeholder="soft-skill" id="softskill"><br>
 
 
     <input  type="hidden" name="token" value="votre_jeton_CSRF">
